--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -166,6 +166,42 @@
     <div class="row" id="table">
       <div class="col-md-2">
 
+        TBD</div>
+      <div class="col-md-2">
+
+        <img src="../../../assets/elgatodiablo/314.png" class="rounded-circle" alt=""
+          style="width: 45px; height: 45px" />
+      </div>
+      <div class="col-md-2">
+        <p>
+          <a href="https://opensea.io/collection/elgatodiablo" class="fw-bold mb-1">El Gato Diablo</a>
+        </p>
+      </div>
+
+      <div class="col-md-2">
+
+
+        <span class="badge badge-primary rounded-pill d-inline">Minting Now</span>
+      </div>
+      <div class="col-md-2">
+
+        2222</div>
+
+      <div class="col-md-2">
+
+        <button [routerLink]="['/elgatodiablo']" id="styled-mint-button">
+          Mint!
+        </button>
+      </div>
+
+    </div>
+
+
+
+
+    <div class="row" id="table">
+      <div class="col-md-2">
+
         TDB</div>
       <div class="col-md-2">
 
