--- a/src/app/components/elgatodiablo/elgatodiablo.component.scss
+++ b/src/app/components/elgatodiablo/elgatodiablo.component.scss
@@ -6,6 +6,7 @@
 
 #styled {
     width: 95%;
+    margin: 1vh;
     margin-bottom: 25px;
     margin-left: auto;
     margin-right: auto;
@@ -28,6 +29,7 @@
 
   #centered{
     justify-content: center;
+    margin: 1%;
   }
 
   #gato-img {
