--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,12 +1,4 @@
-:host {
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica,
-    Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
-  font-size: 14px;
-  color: #333;
-  box-sizing: border-box;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-}
+
 
 h1,
 h2,
@@ -15,6 +7,7 @@ h4,
 h5,
 h6 {
   margin: 8px 0;
+  background-color: rgb(167, 213, 255);
 }
 
 p {
