--- a/src/app/components/navbar/navbar.component.scss
+++ b/src/app/components/navbar/navbar.component.scss
@@ -1,83 +1,36 @@
-.hoverText:hover{
-  text-decoration: underline;
-  
-  }
-  .hoverText{
-    text-shadow: 1px 1px 1px #000;
-    
-    }
+/* Universal transition */
+* {
+  transition: all 0.3s ease-in-out;
+}
+
+.hoverText {
+  font-weight: 700;
+}
+
+.hoverText:hover {
+  text-decoration: none;
+}
 
 .navbar-image img {
-    transition: 0.5s all ease-in-out;
-  }
-  
-  .navbar-image:hover img {
-    transform: scale(1.25);
-  }
-  
+  border-radius: 50%;
+  transform: scale(1);
+  transition: transform 0.3s ease-in-out;
+}
 
-  #navbar-text{
-    font-family: EncodeSansCondensedBold;
-    transition: 0.5s all ease-in-out;
-    font-size: large;
-    margin: 5px;
-  }
+.navbar-image:hover img {
+  transform: scale(1.1);
+}
 
-  #navbar-text:hover{
-    font-family: EncodeSansCondensedBold;
-    transform: scale(1.05);
+#navbar-text {
+  color: black;
+  margin-left: 1rem;
+  font-family: 'Encode Sans Condensed', sans-serif;
+  font-weight: bold;
+  font-size: 1em;
+}
 
-    margin: 5px;
-  }
-
-  .styledNav {
-    min-width: 150px;
-    margin: auto;
-    margin-bottom: 4px;
-    border: 0;
-    line-height: 2.5;
-    padding: 0 20px;
-    font-size: 1rem;
-    text-align: center;
-    color: black;
-    text-shadow: 1px 1px 1px #000;
-    border-radius: 10px;
-    background-color: pink;
-    background-image: linear-gradient(to top left,
-        rgba(0, 0, 0, 0.2),
-        rgba(0, 0, 0, 0.2) 30%,
-        rgba(0, 0, 0, 0));
-    box-shadow: inset 2px 2px 3px pink, inset -2px -2px 3px rgba(0, 0, 0, 0.6);
-  }
- 
-  .styledDisabled {
-    max-width: 200px;
-  
-    min-width: 150px;
-    margin-bottom: 4px;
-    border: 0;
-    line-height: 2.5;
-    padding: 0 20px;
-    font-size: 1rem;
-    text-align: center;
-    color: black;
-    text-shadow: 1px 1px 1px #000;
-    border-radius: 10px;
-    background-color: rgb(141, 139, 110);
-    background-image: linear-gradient(to top left,
-        rgba(0, 0, 0, 0.2),
-        rgba(0, 0, 0, 0.2) 30%,
-        rgba(0, 0, 0, 0));
-    box-shadow: inset 2px 2px 3px pink, inset -2px -2px 3px rgba(0, 0, 0, 0.6);
-  }
-  
-  .styled:hover {
-    background-color: pink;
-    box-shadow: inset 2px 2px 3px rgb(108, 34, 46), inset -2px -2px 3px rgba(0, 0, 0, 0.6);
-    font-size: 1.05rem;
-  }
-  
-  .styled:active {
-    box-shadow: inset -2px -2px 3px rgba(255, 255, 255, 0.6),
-      inset 2px 2px 3px rgba(0, 0, 0, 0.6);
-  }
+#navbar-text:hover {
+  color: black;
+  transform: scale(1.1);
+  font-weight: bolder;
+}
