aura link n img

--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -1,8 +1,7 @@
 <div class="center-div" style="  display: grid;
 ">
   <div style id="styledText">
-    <h6 style="font-weight: bold; "><u>** Welcome to Toonverse Studios!
-        **</u> </h6>
+    <h6 style="font-weight: bold; "><u>Welcome to Toonverse Studios!</u> </h6>
     <img src="../../../assets/toonverse/multiBanner.png" alt="logo" height="50%" width="50%"
       style=" margin-bottom: 20px;margin-top: 10px;" /><br>
 
@@ -55,13 +54,13 @@
         </p>
 
 
-        <button id="navbar-text" class="styled" [routerLink]="['/elgatodiablo']">View Mint!</button>
+        <button id="styled-mint-button" style="margin: 1%;" [routerLink]="['/elgatodiablo']">View Mint!</button>
         <br>
-        <button id="navbar-text" class="styled"> <a href="https://opensea.io/collection/elgatodiablo"
+        <button id="styled-mint-button" style="margin: 1%;"><a href="https://opensea.io/collection/elgatodiablo"
            >View
             Opensea</a></button>
         <br>
-        <button id="navbar-text" class="styled"> <a
+        <button id="styled-mint-button" style="margin: 1%;"> <a
             href="https://etherscan.io/address/0xa8b62866020970943de4f0e6fc4acf3e31636346#code"
            >View
             Contract </a></button>
