--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -7,7 +7,7 @@
       <div class="navbar-image">
         <img src="./../../../assets/toonverse/toonverseLogo.png" alt="logo" width="50" />
       </div>
-      <a href="#" id="navbar-text">Toonverse Studios!</a>
+      <a href="#" id="navbar-text">Toonverse Studios</a>
     </div>
 
     <!-- Toggle button -->
@@ -71,7 +71,7 @@
         </button>
       </form> -->
 
-      <div  class="hoverText" style="font-weight: bold; margin-right: 2vw;margin-top: auto; margin-bottom: auto;">Current Staked DevilCatz : {{totalStakedNfts}}
+      <div  class="hoverText" style="font-weight: bold; margin-left: 2vw; margin-right: 2vw;margin-top: auto; margin-bottom: auto;">Current Staked DevilCatz : {{totalStakedNfts}}
       </div>
     
       <a style="margin: 5px" href="https://opensea.io/assets/ethereum/0x1c4a28690482b03f6991c8c24295016cba197c12/">
@@ -79,11 +79,17 @@
           style="border-radius: 5%" />
       </a>
 
-      <a style="margin: 5px; margin-bottom: 5px;margin-right: 2vw;"
-        href="https://rarible.com/token/0x1c4a28690482b03f6991c8c24295016cba197c12:?tab=overview">
+      <a style="margin: 5px; margin-bottom: 5px; margin-left: 1vw;"
+        href="https://rarible.com/toonverseStudios/items">
         <img id="center-img" src="../../../assets/rarible.png" alt="rarible" height="25vh" width="25vw"
           style="border-radius: 5%" />
       </a>
+
+      <a style="margin: 5px; margin-bottom: 5px;margin-right: 3vw; margin-left: 0.5vw;"
+      href="https://hub.auraexchange.org/collection/ethereum/0x1c4a28690482b03f6991c8c24295016cba197c12">
+      <img id="center-img" src="../../../assets/aura.png" alt="aura" height="25vh" width="25vw"
+        style="border-radius: 5%" />
+    </a>
 
     </div>
     <!-- Collapsible wrapper -->
