--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -97,7 +97,7 @@
       <div class="col-md-2">
 
         <div class="ms-3">
-          <p> <a href="https://opensea.io/collection/toonversestudios" class="fw-bold mb-1">Devil Catz</a>
+          <p> <a href="https://hub.auraexchange.org/collection/ethereum/0x1c4a28690482b03f6991c8c24295016cba197c12" class="fw-bold mb-1">Devil Catz</a>
           </p>
 
         </div>
