--- a/src/app/components/marketplace/marketplace.component.html
+++ b/src/app/components/marketplace/marketplace.component.html
@@ -1,30 +1,24 @@
 <div class="center-div" style=" display: inline list-item;
 ">
-    <h6 style="font-weight: bold; "><u>**ToonVerse Marketplace**</u> </h6>
+    <h6 style="font-weight: bold; "><u>ToonVerse Marketplace</u> </h6>
     The location for future mints and the ability to purchase ownership of entire collections, control the ownership
     control the opensea | etherscan | rarible | royalties| etc.
 
 
-
-
-
-
-
-
-
     <div class="container" style="margin-bottom: 100px; margin-top:25px">
-        <div class="row"
-            style="  justify-content: center; padding: 15px;background-color: aliceblue;border-bottom-style: double;">
-            <div class="col-md-2">Price</div>
-            <div class="col-md-2">Icon</div>
+        <div class="row" id="marketplace-item">
+            <div class="col-md-2">Collection Price</div>
+            <div class="col-md-2"></div>
             <div class="col-md-2">Project</div>
             <div class="col-md-2">Status</div>
             <div class="col-md-2">Supply</div>
             <div class="col-md-2">Link</div>
         </div>
-        <div class="row" id="table">
+        <div class="row" id="marketplace-item">
+
+          
             <div class="col-md-2">
-                Not for sale
+                NFS
             </div>
 
             <div class="col-md-2">
@@ -60,7 +54,7 @@
             </div>
         </div>
 
-        <div class="row" id="table">
+        <div class="row" id="marketplace-item">
 
             <div class="col-md-2">
                 50 ETH
@@ -79,8 +73,7 @@
                         style="border-radius: 5%" />
                 </a> -->
                 <p>
-                    <a href="https://opensea.io/collection/fruittowngremlins-wtfruit" class="fw-bold mb-1">Fruit Town
-                        Gremlins</a>
+                    <a href="https://opensea.io/collection/fruittowngremlins-wtfruit" class="fw-bold mb-1">Fruit Town Gremlin</a>
                 </p>
 
             </div>
@@ -101,21 +94,23 @@
                         SOLD OUT
                     </button></a>
 
-            </div>
+                    
+
+           </div>
 
         </div>
 
-        <div class="row" id="table">
+        <div class="row" id="marketplace-item">
             <div class="col-md-2">
 
                 TDB</div>
             <div class="col-md-2">
 
-                <img src="../../../assets/toonverse/tanggang/tangGang.png" class="rounded-circle" alt=""
+                <img src="../../../assets/toonverse/Gen1/gato.png" class="rounded-circle" alt=""
                     style="width: 45px; height: 45px" />
             </div>
             <div class="col-md-2">
-                <p class="fw-bold mb-1">Tang Gang</p>
+                <p class="fw-bold mb-1">El Gato Diablo</p>
 
             </div>
 
@@ -136,17 +131,17 @@
             </div>
 
         </div>
-        <div class="row" id="table">
+        <div class="row" id="marketplace-item">
             <div class="col-md-2">
 
                 TDB</div>
             <div class="col-md-2">
 
-                <img src="../../../assets/toonverse/clouds/Music.png" class="rounded-circle" alt=""
+                <img src="../../../assets/toonverse/Gen1/akuma.jpeg" class="rounded-circle" alt=""
                     style="width: 45px; height: 45px" />
             </div>
             <div class="col-md-2">
-                <p class="fw-bold mb-1">Crazy Cloud Club</p>
+                <p class="fw-bold mb-1">Neko Akuma</p>
 
             </div>
 
@@ -164,7 +159,7 @@
                 <button disabled [routerLink]="['/manage']" id="styled-mint-button">
                     TBD
                 </button>
-            </div>
+    <!--          </div>
 
         </div>
 
@@ -229,7 +224,7 @@
 
                 <button disabled [routerLink]="['/manage']" id="styled-mint-button">
                     TBD
-                </button>
+                </button> -->
             </div>
         </div>
     </div>
