--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -29,8 +29,8 @@
           <p (click)="basicNavbar.toggle()" id="navbar-text" class="styled" [routerLink]="['/manage']">Staking</p>
         </li>
         <li class="nav-item">
-        </li>
-        <!-- <li class="nav-item">
+        <!-- </li>
+        <li class="nav-item">
           <p id="navbar-text"(click)="basicNavbar.toggle()" class="styled" [routerLink]="['/marketplace']">Marketplace</p>
         </li> -->
         <li class="nav-item">
@@ -85,9 +85,9 @@
           style="border-radius: 5%" />
       </a>
 
-      <a style="margin: 5px; margin-bottom: 5px;margin-right: 3vw; margin-left: 0.5vw;"
+      <a style="margin: 5px; margin-bottom: 5px;margin-right: 3vw; margin-left: 0.5vw; "
       href="https://hub.auraexchange.org/collection/ethereum/0x1c4a28690482b03f6991c8c24295016cba197c12">
-      <img id="center-img" src="../../../assets/aura.png" alt="aura" height="25vh" width="25vw"
+      <img id="center-img" src="../../../assets/aura.png" alt="aura" height="40vh" width="40vw"
         style="border-radius: 5%" />
     </a>
 
