--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -110,12 +110,12 @@ p {
 a,
 a:visited,
 a:hover {
-  color: #1976d2;
+ // color: #1976d2;
   text-decoration: none;
 }
 
 a:hover {
-  color: #125699;
+ // color: #125699;
 }
 
 footer {
