--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -9,7 +9,7 @@
         <app-navbar></app-navbar>
       </div>
 
-      <div class="card main" class="main" id="styledText" style="position: relative;top: 110px;justify-items: center;
+      <div style="position: relative;top: 110px;justify-items: center;
       text-align: center;margin-bottom: 3%;">
 
 
