--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -1,44 +1,30 @@
-<div class="center-div" style="  display: grid;
-">
-  <div style id="styledText">
-    <h6 style="font-weight: bold; "><u>Welcome to Toonverse Studios!</u> </h6>
-    <img src="../../../assets/toonverse/multiBanner.png" alt="logo" height="50%" width="50%"
-      style=" margin-bottom: 20px;margin-top: 10px;" /><br>
-
-    <p> A WEB3 Art development platform.<br>
-      Our Tokenomics are really simple.
-      <br>
-      - Mint a DevilCat
-      <br>
-      - Stake your DevilCat to earn TOON
-      <br>
-      - Use TOON to mint future collections.
-      <br>
-      - Grow TOON ecosytem by offering entire collections for TOON or ETH.
-      <br>
-      - Grow TOON ecosytem by launchpadding other projects with ART and DEV work.
-    </p>
+<div>
+  <div>
+    <p class="comic-bio">
+      Welcome to ToonVerse, a vibrant WEB3 Art Development platform. Our unique tokenomics make it incredibly straightforward 
+      to dive into the world of our NFTs. Start by minting a DevilCat. The fun doesn't stop there. 
+      Stake your DevilCat to earn $TOON tokens, the heart of our ecosystem. Use your $TOON to mint future collections, 
+      bringing to life an array of quirky characters and fascinating worlds. We aim to continuously grow the $TOON 
+      ecosystem by offering entire collections for $TOON or ETH. Moreover, we launchpad other projects with exceptional 
+      ART and DEV work to further enrich the $TOON ecosystem. Adventure awaits in the ToonVerse!</p><br><br><br>
+    <img src="../../../assets/toonverse/multiBanner.png" alt="logo" class="centered-image" />
+    <br><br>
     <h4>
-      <button id="styled-mint-button" style="margin: 1%;"> <a style="margin: 10%;"
-          href="https://etherscan.io/token/0x1c4a28690482b03f6991c8c24295016cba197c12#code" style="margin: 10px;">View
-          Contract</a></button>
-      <button id="styled-mint-button" style="margin: 1%;"> <a href="https://opensea.io/collection/toonversestudios"
-          style="margin: 10px">View
-          Opensea</a></button>
-      <button id="styled-mint-button" style="margin: 1%;"> <a href="https://rarible.com/toonverseStudios">View
-          Rarible</a></button>
-
+      <button class="home-item" style="margin: 1%; color: purple;"> <a style="margin: 10%;" href="https://etherscan.io/token/0x1c4a28690482b03f6991c8c24295016cba197c12#code">View Contract</a></button>
+      <button class="home-item" style="margin: 1%;"> <a href="https://opensea.io/collection/toonversestudios">View Opensea</a></button>
+      <button class="home-item" style="margin: 1%;"> <a href="https://rarible.com/toonverseStudios">View Rarible</a></button>
+      <button class="home-item" style="margin: 1%;"> <a href="https://hub.auraexchange.org/collection/ethereum/0x1c4a28690482b03f6991c8c24295016cba197c12">View Aura</a></button>
     </h4>
   </div>
 
-  <div class="card" id="card-mintDevilCat">
+  <div >
     <div class="container">
       <div class="card-body">
         <h6>**Minting Soon **</h6>
         <p>EL GATO DIABLO!</p>
 
-        <img id="center-img-gif" src="../../../assets/elgatodiablo/elgatodiabloGIF.webp" alt="logo" height="40%"
-          width="63%" style="border-radius: 5%" />
+        <img id="center-img-gif" src="../../../assets/elgatodiablo/elgatodiabloGIF.webp" alt="logo" height="20%"
+          width="20%" style="border-radius: 5%" />
         <br>
         <br>
         <p> Check back May 7th...
@@ -54,17 +40,11 @@
         </p>
 
 
-        <button id="styled-mint-button" style="margin: 1%;" [routerLink]="['/elgatodiablo']">View Mint!</button>
+        <button class="home-item" style="margin: 1%;" [routerLink]="['/elgatodiablo']">View Mint!</button>
         <br>
-        <button id="styled-mint-button" style="margin: 1%;"><a href="https://opensea.io/collection/elgatodiablo"
-           >View
-            Opensea</a></button>
+        <button class="home-item" style="margin: 1%;"><a href="https://opensea.io/collection/elgatodiablo">View Opensea</a></button>
         <br>
-        <button id="styled-mint-button" style="margin: 1%;"> <a
-            href="https://etherscan.io/address/0xa8b62866020970943de4f0e6fc4acf3e31636346#code"
-           >View
-            Contract </a></button>
-
+        <button class="home-item" style="margin: 1%;"><a href="https://etherscan.io/address/0xa8b62866020970943de4f0e6fc4acf3e31636346#code">View Contract </a></button>
       </div>
     </div>
   </div>
@@ -115,7 +95,7 @@
 
       <div class="col-md-2">
 
-        <button [routerLink]="['/manage']" id="styled-mint-button">
+        <button [routerLink]="['/manage']" class="home-item">
           Stake
         </button>
       </div>
@@ -154,7 +134,7 @@
 
       <div class="col-md-2">
         <a href="https://opensea.io/collection/fruittowngremlins-wtfruit" class="fw-bold mb-1">
-          <button id="styled-mint-button">
+          <button class="home-item">
             SOLD OUT
           </button></a>
 
@@ -188,7 +168,7 @@
 
       <div class="col-md-2">
 
-        <button [routerLink]="['/elgatodiablo']" id="styled-mint-button">
+        <button [routerLink]="['/elgatodiablo']" class="home-item">
           Mint!
         </button>
       </div>
@@ -223,7 +203,7 @@
 
       <div class="col-md-2">
 
-        <button disabled [routerLink]="['/manage']" id="styled-mint-button">
+        <button disabled [routerLink]="['/manage']" class="home-item">
           TBD
         </button>
       </div>
@@ -254,7 +234,7 @@
 
       <div class="col-md-2">
 
-        <button disabled [routerLink]="['/manage']" id="styled-mint-button">
+        <button disabled [routerLink]="['/manage']" class="home-item">
           TBD
         </button>
       </div>
@@ -289,7 +269,7 @@
 
       <div class="col-md-2">
 
-        <button disabled [routerLink]="['/manage']" id="styled-mint-button">
+        <button disabled [routerLink]="['/manage']" class="home-item">
           TBD
         </button>
       </div>
@@ -320,7 +300,7 @@
 
       <div class="col-md-2">
 
-        <button disabled [routerLink]="['/manage']" id="styled-mint-button">
+        <button disabled [routerLink]="['/manage']" class="home-item">
           TBD
         </button>
       </div>
